--- a/front/angular.json
+++ b/front/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "amstore"
+  "defaultProject": "amstore",
+  "cli": {
+    "analytics": "e8dc741e-5dc3-4c36-9e60-e01f4c482f08"
+  }
 }
