--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -54,6 +54,7 @@
         }
     },
     "angularCompilerOptions": {
+        "enableI18nLegacyMessageIdFormat": false,
         "strictInjectionParameters": true,
         "strictInputAccessModifiers": true,
         "strictTemplates": true
