--- a/front/angular.json
+++ b/front/angular.json
@@ -36,7 +36,7 @@
                         ],
                         "stylePreprocessorOptions": {
                             "includePaths": [
-                                "src/app/styles"
+                                "./src/app/styles"
                             ]
                         },
                         "scripts": []
